--- a/Display/Display.csproj
+++ b/Display/Display.csproj
@@ -32,6 +32,9 @@
     <Compile Update="Control\ControlWorkProcess.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Manual.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="TransportHistory.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
