QRコード入力処理

--- a/Display/Display.csproj
+++ b/Display/Display.csproj
@@ -43,6 +43,9 @@
     <Compile Update="SlipIssue.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Transport.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="TransportHistory.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
